# rusty-wire

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rusty-wire-results.csv  test_output.txt
.cargo/: config.toml
.githooks/: pre-commit  pre-push
.github/workflows/: corpus-validation.yml  coverage.yml  docs-validate.yml  format-and-lint.yml  packaging-version-sync.yml  release-packaging.yml  security-audit.yml  unit-tests.yml
corpus/: dipole-10m-ground-good.nec  dipole-12m-ground-good.nec  dipole-40m-freesp.nec  dipole-40m-ground-avg.nec  dipole-40m-ground-fresnel.nec  dipole-40m-ground-good.nec  dipole-40m-ground-perfect.nec  dipole-40m-ground-poor.nec  dipole-7m-ground-good.nec  efhw-40m.nec  inverted-v-40m-90deg.nec  nec2c-dipole-40m-freesp.nec  nec2c-invertedv-40m-freesp.nec  nec2c-reference.json  reference-results.json  skip_distance_40m_itut_p368.notes
docs/: CHANGELOG.md  architecture.md  backlog.md  cli-guide.md  collaboration-constraints.md  copilot-collaboration-playbook.md  copilot-memories.md  corpus-guide.md  math.md  memories.md  nec-calibration.md  nec-requirements.md  ocfd-optimization-explained.md  project-blueprint.md  project-review.md  release-checklist.md  releasenotes.md  requirements.md  roadmap.md  steering.md  testing.md  tui-screenshots.md
docs/data/: nec_conductor_reference.csv
docs/man/: rusty-wire.1.md
docs/templates/: collaboration-constraints-template.md  copilot-collaboration-playbook-template.md
gui/: Cargo.toml
gui/src/: main.rs
packaging/: example-bands.toml
packaging/arch/rusty-wire/: PKGBUILD
packaging/arch/rusty-wire-git/: PKGBUILD
packaging/debian/: changelog  control  copyright  rules
packaging/windows/: rusty-wire.wxs
sbom/: rusty-wire.cdx.json  rusty-wire.spdx.json
scripts/: calibrate-conductor-model.sh  check-packaging-version-sync.sh  generate-sbom.sh  nec-reference.sh  pi-remote-workspace-check.sh  protect-main-branch.sh  render-tui-snapshots.py  sync-packaging-version.sh  test-all.sh  test-itu-region-bands.sh  test-multi-optima.sh  test-nec-calibration.sh
src/: app.rs  band_presets.rs  bands.rs  calculations.rs  cli.rs  export.rs  fnec_validation.rs  lib.rs  main.rs  nec_export.rs  prefs.rs  sessions.rs
src/app/: advise.rs  band_select.rs  mod.rs  state.rs  sweeps.rs
src/tui/: mod.rs
src/ui/: tui.rs
tests/: cli_integration.rs  corpus_validation.rs  export_format_contract.rs  tolerance_helpers.rs
