[package]
name = "rusty-wire"
version = "2.6.0"
authors = ["Simon Keimer (DC0SK)"]
license = "GPL-2.0-or-later"
repository = "https://github.com/dc0sk/rusty-wire"
edition = "2021"
keywords = ["amateur-radio", "antenna", "ham-radio", "rf", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
