[package]
name = "rusty-wire"
version = "2.16.0"
authors = ["Simon Keimer (DC0SK)"]
license = "GPL-2.0-or-later"
repository = "https://github.com/dc0sk/rusty-wire"
edition = "2021"
keywords = ["amateur-radio", "antenna", "ham-radio", "rf", "cli"]
categories = ["command-line-utilities"]

[package.metadata.deb]
name = "rusty-wire"
section = "hamradio"
priority = "optional"
assets = [
    { source = "target/release/rusty-wire", dest = "/usr/bin/rusty-wire", mode = "755" },
    { source = "README.md", dest = "/usr/share/doc/rusty-wire/README.md", mode = "644" },
    { source = "target/man/rusty-wire.1.gz", dest = "/usr/share/man/man1/rusty-wire.1.gz", mode = "644" },
]
extended-description = """\
Wire antenna length calculator for amateur radio operators. \
Supports CLI and full-screen TUI modes, ITU/amateur band constraints, \
velocity factor, and multiple antenna types.\
"""

[dependencies]
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3"
